Правки логирования